--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "iot-reveal",
+  "name": "testapi",
   "version": "1.0.0",
-  "description": "The idea of this project is using a connected system of small microcontrollers that register clinical protocol activities with NFC bracelets, sends the data to a databse that can be called back for real time analysis. The goal that this would accomplish is giving providers the ability to augment their procedures in real time, to improve and reach a better level of efficiency. We are putting equal focus on the patient and provider experice in order to make a product that improves the overall clinical experience.",
-  "main": "run.js",
-  "dependencies": {
-    "odbc": "^1.2.1",
-    "mssql": "^4.0.4"
-  },
-  "devDependencies": {},
+  "description": "RESTful API test",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon backend/server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://scrochet@codehub.optum.com/raleigh-tdp/iot-reveal.git"
+  "keywords": [
+    "test"
+  ],
+  "author": "jhayne14",
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^1.11.0"
   },
-  "author": "",
-  "license": "ISC"
+  "dependencies": {
+    "body-parser": "^1.17.2",
+    "express": "^4.15.3",
+    "odbc": "^1.2.1"
+  }
 }
