--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "jhayne14",
   "license": "ISC",
   "devDependencies": {
+    "jest": "^20.0.4",
     "nodemon": "^1.11.0"
   },
   "dependencies": {
