--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "json": "^9.0.6",
+    "jsonp": "^0.2.1",
     "odbc": "^1.2.1"
   }
 }
