--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "RESTful API test",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon backend/server.js"
   },
   "keywords": [
