--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "jest",
-    "start": "nodemon backend/server.js"
+    "start": "node backend/server.js"
   },
   "keywords": [
     "test"
