--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "js-sha256": "^0.5.0",
     "json": "^9.0.6",
     "jsonp": "^0.2.1",
-    "mysql": "^2.13.0"
+    "mysql": "^2.13.0",
+    "path": "^0.12.7"
   }
-  
 }
