--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "testapi",
   "version": "1.0.0",
   "description": "RESTful API test",
+  "main": "index.html",
   "scripts": {
-    "start": "node backend/server.js"
+    "start": "node server.js"
   },
   "keywords": [
     "test"
   ],
   "engines": {
-    "node": "6.10.0"
+    "node": "5.1.1"
   },
   "author": "jhayne14",
   "license": "ISC",
