--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "json": "^9.0.6",
     "jsonp": "^0.2.1",
     "mysql": "^2.13.0",
+    "nexmo": "^2.0.2",
     "path": "^0.12.7",
     "synchronize": "^2.0.0"
   }
